force-app/main/default/objects/Pharma_Project_Budget_Line__c/Pharma_Project_Budget_Line__c.object-meta.xml
<CustomObject>
    <label>Pharma Project Budget Line</label>
    <nameField>
        <label>Budget Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharma Project Budget Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>