force-app/main/default/objects/Pharma_Project_Budget_Line__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Pharma_Project_Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>