force-app/main/default/objects/Pharma_Project_Budget_Line__c/fields/Promo_Budget_Line__c.field-meta.xml
<CustomField>
    <fullName>Promo_Budget_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promo Budget Line</label>
    <referenceTo>Promo_Budget_Line__c</referenceTo>
    <relationshipName>Pharma_Project_Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>