force-app/main/default/objects/Pharma_Project_Budget_Line__c/fields/Spent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Spent_Amount__c</fullName>
    <label>Spent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>